Emails: Fix display issues cropping up when stylesheets are loaded in a specific order

--- a/client/my-sites/email/email-management/style.scss
+++ b/client/my-sites/email/email-management/style.scss
@@ -120,12 +120,14 @@
 
 .email-list-inactive {
 	margin-top: 15px;
+
 	> .card {
 		align-items: center;
 		display: flex;
 		margin-bottom: 0;
 		padding-bottom: 20px;
 		padding-top: 20px;
+
 		> span {
 			flex: 1 1 auto;
 			line-height: 40px;
@@ -146,7 +148,7 @@
 }
 
 .email-plan__actions .vertical-nav-item.card,
-.email-plan-mailboxes-list__mailbox-list-item.card {
+.email-plan-mailboxes-list__mailbox-list-item.card.is-compact {
 	padding-bottom: 28px;
 	padding-top: 28px;
 }
@@ -161,13 +163,16 @@
 }
 
 .email-plan-header {
-	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
 
 	h2 {
 		font-size: $font-title-large;
 		word-break: break-all;
+	}
+
+	&.card {
+		display: flex;
 	}
 
 	&.success {
@@ -226,7 +231,8 @@
 	display: flex;
 	line-height: 24px;
 
-	> img, > svg {
+	> img,
+	> svg {
 		margin-right: 8px;
 	}
 
@@ -234,6 +240,7 @@
 		> img {
 			filter: grayscale( 100% ) brightness( 0.2 ) invert( 1 );
 		}
+
 		> svg {
 			fill: white;
 		}
@@ -245,10 +252,11 @@
 }
 
 .email-plan-mailboxes-list__mailbox-list-item {
-	display: flex;
 	flex-direction: column;
 
 	&.card {
+		display: flex;
+
 		&.is-compact {
 			@include break-xlarge {
 				flex-direction: row;
@@ -290,21 +298,25 @@
 			margin-top: 0.5em;
 		}
 	}
+
 	&.is-placeholder > span,
 	&.is-placeholder .email-plan-mailboxes-list__mailbox-list-item-main {
 		@include placeholder( --color-neutral-5 );
 		width: 50%;
 	}
+
 	&.no-emails > span {
 		color: var( --color-text-subtle );
 		font-style: italic;
 	}
+
 	> svg,
 	.email-plan-mailboxes-list__mailbox-list-item-main svg {
 		fill: var( --studio-gray-40 );
 		margin-right: 10px;
 		vertical-align: middle;
 	}
+
 	.email-plan-mailboxes-list__mailbox-list-item-main span {
 		vertical-align: middle;
 		word-break: break-all;
@@ -341,6 +353,7 @@
 			margin-right: 6px;
 			vertical-align: middle;
 		}
+
 		> span {
 			vertical-align: middle;
 		}
@@ -364,8 +377,11 @@
 
 .email-plan-subscription__card {
 	align-items: center;
-	display: flex;
 	flex-wrap: wrap;
+
+	&.card {
+		display: flex;
+	}
 
 	@include break-small {
 		flex-wrap: initial;
@@ -386,6 +402,7 @@
 		label {
 			font-size: $font-body;
 		}
+
 		/* vertically aligns the auto-renew toggle - not sure if there's a better way... */
 		> div > div {
 			margin-top: auto;
